# rot

./: .gitignore  CMakeLists.txt  README.md  fmt.json
src/: config.h  printers.h  state.h
src/client/: functions.h  http-client.h  main.cpp
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  App.scss  index.css
src/installer/: main.cpp
src/lib/: http-installer.h  http-installer.hpp  http.hpp
src/server/: client_list.h  endpoints.cpp  endpoints.h  main.cpp  server.cpp  server.h  util.h
